--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Corazón y Número</title>
+<title>Feliz cumple</title>
 <style>
     body {
         display: flex;
@@ -11,6 +11,7 @@
         align-items: center;
         height: 100vh;
         margin: 0;
+        flex-direction: column; 
     }
     .corazon {
         font-size: 100px;
@@ -20,10 +21,15 @@
     .numero {
         font-size: 60px;
     }
+    .mensaje {
+        font-size: 20px;
+        color: gray;
+    }
 </style>
 </head>
 <body>
     <div class="corazon">&hearts;</div>
-    <div class="numero">456</div>
+    <div class="numero">317</div>
+    <div class="mensaje">estás viejita ya :)</div>
 </body>
 </html>
