--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     .mensaje {
         font-size: 20px;
         color: gray;
+        bottom: 0;
+        position: absolute;
+        margin-left: 90%;
     }
 </style>
 </head>
